<resources>
    <string name="app_name">To do list</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="header_hint">Header</string>
    <string name="body_hint">Text</string>
    <string name="add_note_fab_desc">Add note button</string>
    <string name="priority">Priority</string>
    <string name="priority_high">high</string>
    <string name="priority_medium">medium</string>
    <string name="priority_low">low</string>
    <string name="timestamp_draw_pattern">dd.MM.yy HH:mm</string>
    <string name="note_item_priority_title">Priority</string>
    <string name="note_item_priority_draw_pattern">%s: %s</string>
    <string name="top_bar_sort">Sort by</string>
    <string name="top_bar_filter">Filter</string>
    <string name="sort_by">Sort by:</string>
    <string name="chip_date">Date</string>
    <string name="chip_priority">Priority</string>
    <string name="top_bar_search">Search</string>
    <string name="search_hint">Search here</string>
</resources>